--- a/index.html
+++ b/index.html
@@ -5,16 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>    <!-- <link rel="stylesheet" href="./sass/main.scss" /> -->
+    <link rel="stylesheet" href="./css/main.min.css" />
+</head>    
 
 <body>
     <section class="game-start">
-        <div class="container">
-            <source srcset="./images/hand_1x.png 1x , ./images/hand_2x.png 2x" media="(min-width: 1440px)">
-            <img src="./images/hand_1x.png" alt="" class="team-img__item">
-            <h1 class="title">Who wants to be a millionaire?</h1>
-            <button type="button" class="start-button"></button>
+        <div class="container container--flex">
+            <picture>
+                <source srcset="./images/hand_desktop_1x.png 1x , ./images/hand_desktop_2x.png 2x" media="(min-width: 1440px)">
+                <source srcset="./images/hand_mobile_1x.png 1x , ./images/hand_mobile_2x.png 2x" media="(min-width: 768px)">
+                <source srcset="./images/hand_mobile_1x.png 1x , ./images/hand_mobile_2x.png 2x" media="(min-width: 320px)">
+                <img src="./images/hand_desktop_1x.png" alt="" class="team-img__item">
+            </picture>
+            <div class="desktop-right-block">
+                <h1 class="title">Who wants to be a&nbsp;millionaire?</h1>
+                <button type="button" class="start-button">Start</button>
+            </div>
         </div>
     </section>
 </body>
