--- a/index.html
+++ b/index.html
@@ -21,9 +21,71 @@
             </picture>
             <div class="desktop-right-block">
                 <h1 class="title">Who wants to be a&nbsp;millionaire?</h1>
-                <button type="button" class="start-button">Start</button>
+                <button type="button" class="start-button" start-btn>Start</button>
             </div>
         </div>
     </section>
+
+    <section class="game-section is-hidden">
+        <div class="container container--game-flex">
+            <button class="menu-open-btn">
+                <svg class="icon-menu" width="16px" height="14px">
+                    <use  href="./images/symbol-defs.svg#icon-menu">
+                </svg>
+            </button>
+            <h3 class="question">How old your elder brother was 10 years before you was born, mate?</h3>
+            <ul class="answers">
+                    <li class="answer__item">
+                        <button type="submit" class="answer-button">
+                        <span class="answer__leter">A</span>
+                        10 years
+                    </button>
+                </li>
+                    <li class="answer__item">
+                        <button type="submit" class="answer-button">
+                        <span class="answer__leter">B</span>
+                        11 years
+                    </button>
+                </li>
+                    <li class="answer__item">
+                        <button type="submit" class="answer-button">
+                        <span class="answer__leter">C</span>
+                        12 years
+                    </button>
+                </li>
+                    <li class="answer__item">
+                        <button type="submit" class="answer-button">
+                        <span class="answer__leter">D</span>
+                        14 years
+                    </button>
+                </li>
+            </ul>
+        </div>
+    </section>
+
+    <section class="menu-section is-hidden">
+        <div class="container container--menu-flex">
+            <button class="menu-open-btn">
+                <svg class="icon-cross" width="24px" height="24px">
+                    <use href="./images/symbol-defs.svg#icon-cross"/>
+                </svg>
+            </button>
+            <ul class="prizes">
+                <li class="prize__item">$1,000,000</li>
+                <li class="prize__item">$500,000</li>
+                <li class="prize__item">$250,000</li>
+                <li class="prize__item">$125,000</li>
+                <li class="prize__item">$64,000</li>
+                <li class="prize__item">$32,000</li>
+                <li class="prize__item">$16,000</li>
+                <li class="prize__item">$8,000</li>
+                <li class="prize__item">$4,000</li>
+                <li class="prize__item">$2,000</li>
+                <li class="prize__item">$1,000</li>
+                <li class="prize__item">$500</li>
+            </ul>
+        </div>
+    </section>
+    <script src="./index.js"></script>
 </body>
 </html>
